Add some custom style

--- a/layouts/partials/post/meta.html
+++ b/layouts/partials/post/meta.html
@@ -5,6 +5,10 @@
         {{ partial "internal/date.html" . }}
       </time>
     {{ end }}
+    {{ if .Params.author}}
+      <span>{{ i18n "post.author" }}: {{ .Params.author }}</span>
+    {{ end }}
+    <!-- {{ .ReadingTime}} -->
     {{ partial "post/category.html" . }}
   </div>
 {{ end }}
