--- a/src/scss/themes/_hljs-custom.scss
+++ b/src/scss/themes/_hljs-custom.scss
@@ -5,7 +5,7 @@
 // with properties of `.hljs` CSS class of your theme
 // 3. Put your theme where it's indicated just below
 // 4. Remove `.hljs {...}` rules
-// 5. Remove `hljs-` of all CSS class name. E.g : `.hljs-comment` becomes `.comment`
+// 5. Remove `` of all CSS class name. E.g : `.comment` becomes `.comment`
 // 6. Comment line 61 (`'themes/tranquilpeak',`) of `source/_css/tranquilpeak.scss` file
 // 7. Run `grunt buildProd` to build the theme and see the result
 /*
@@ -27,25 +27,103 @@ code {
     background: ;
     color: ;
 }
-
+*/
 // highlight code block
 figure.highlight,
 .codeblock {
-    background: ;
-    color: ;
+    background: #23241f;
+    // color: ;
 
     figcaption {
-        background: ;
-        color: ;
+        background: #23241f;
+        // color: ;
     }
     .gutter {
-        background: ;
-        border-right-color: ;
+        background: #23241f;
+        // border-right-color: ;
         .line {
-            color: ;
+            // color: ;
         }
     }
     // PUT YOUR THEME HERE
 
 }
-*/
+
+
+.hljs {
+    display: block;
+    overflow-x: auto;
+    padding: 0.5em;
+    background: #23241f;
+}
+
+.hljs,
+.tag,
+.subst {
+    color: #f8f8f2;
+}
+
+.strong,
+.emphasis {
+    color: #a8a8a2;
+}
+
+.bullet,
+.quote,
+.number,
+.regexp,
+.literal,
+.link {
+    color: #ae81ff;
+}
+
+.code,
+.title,
+.section,
+.selector-class {
+    color: #a6e22e;
+}
+
+.strong {
+    font-weight: bold;
+}
+
+.emphasis {
+    font-style: italic;
+}
+
+.keyword,
+.selector-tag,
+.name,
+.attr {
+    color: #f92672;
+}
+
+.symbol,
+.attribute {
+    color: #66d9ef;
+}
+
+.params,
+.class .title {
+    color: #f8f8f2;
+}
+
+.string,
+.type,
+.built_in,
+.builtin-name,
+.selector-id,
+.selector-attr,
+.selector-pseudo,
+.addition,
+.variable,
+.template-variable {
+    color: #e6db74;
+}
+
+.comment,
+.deletion,
+.meta {
+    color: #75715e;
+}
