--- a/src/scss/tranquilpeak.scss
+++ b/src/scss/tranquilpeak.scss
@@ -58,6 +58,7 @@
     'components/text',
     'components/tooltip',
     'components/video',
+    'components/plnkr',
     'components/stackblitz';
 
 @import
