--- a/layouts/partials/script.html
+++ b/layouts/partials/script.html
@@ -8,7 +8,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.7/js/jquery.fancybox.min.js" integrity="sha256-GEAnjcTqVP+vBp3SSc8bEDQqvWAZMiHyUSIorrWwH50=" crossorigin="anonymous"></script>
 <!--EXTERNAL SCRIPTS END-->
 <!--SCRIPTS-->
-<script src="/js/tranquilpeak.js"></script>
+<script src="/js/script-pu1tmc843pnnrogauj7eaocpuzrgocgzd87h3csiyi6ksr9t5tfzrgx61ztw.min.js"></script>
 <!--SCRIPTS END-->
 {{ range .Site.Params.customJS }}
   {{ if isset . "src" }}
