--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -56,6 +56,21 @@
             border-bottom:  1px solid #eef2f8;
         }
     }
+    kbd {
+        display: inline-block;
+        padding: .25em;
+        background-color: #fafafa;
+        border: 1px solid #dbdbdb;
+        border-bottom-color: #b5b5b5;
+        border-radius: 3px;
+        -webkit-box-shadow: inset 0 -1px 0 #b5b5b5;
+        box-shadow: inset 0 -1px 0 #b5b5b5;
+        font-size: .8em;
+        line-height: 1.25;
+        font-family: SFMono-Regular,Liberation Mono,Roboto Mono,Menlo,Monaco,Consolas,Courier New,Courier,monospace;
+        color: #4a4a4a;
+        vertical-align: text-bottom;
+      }
 }
 
 // Increase the font size of the post's title on medium screen (only for single post view)
