Change stackblitz default view to preview

--- a/layouts/shortcodes/stackblitz.html
+++ b/layouts/shortcodes/stackblitz.html
@@ -1,2 +1,2 @@
-<iframe src="https://stackblitz.com/edit/{{ .Get 0}}?ctl=1&embed=1&view=editor" class="stackblitz" frameorder="0">
+<iframe src="https://stackblitz.com/edit/{{ .Get 0}}?ctl=1&embed=1&view=preview" class="stackblitz" frameorder="0">
 </iframe>
