Add reward shortcode

--- a/src/scss/tranquilpeak.scss
+++ b/src/scss/tranquilpeak.scss
@@ -59,6 +59,7 @@
     'components/tooltip',
     'components/video',
     'components/plnkr',
+    'components/reward',
     'components/stackblitz';
 
 @import
