--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -89,7 +89,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.min.css" integrity="sha256-SEa4XYAHihTcEP1f5gARTB2K26Uk8PsndQYHQC1f4jU=" crossorigin="anonymous" />
     <!--EXTERNAL STYLES END-->
     <!--STYLES-->
-    <link rel="stylesheet" href="/css/style-afplrexm8zv1tzhzjb6xmo98eulnxgsu0nbthcjmdrw8vu4uvcrm1bgr74ii.min.css" />
+    <link rel="stylesheet" href="/css/tranquilpeak.css" />
     <!--STYLES END-->
     {{ range .Site.Params.customCSS }}
       {{ if isset . "href" }}
