--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -89,7 +89,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.4/helpers/jquery.fancybox-thumbs.min.css" integrity="sha256-SEa4XYAHihTcEP1f5gARTB2K26Uk8PsndQYHQC1f4jU=" crossorigin="anonymous" />
     <!--EXTERNAL STYLES END-->
     <!--STYLES-->
-    <link rel="stylesheet" href="/css/style-3cwn5eehpkadurqx0ta7ubjsetytazjlaqw5b87g5bxu5ypunmbf4p4cbtk3.min.css" />
+    <link rel="stylesheet" href="/css/style-whssljysxwtsdyjlu0kilfenu07xneb1kluluzhxgdqggy1yffnebkaxymrl.min.css" />
     <!--STYLES END-->
     {{ range .Site.Params.customCSS }}
       {{ if isset . "href" }}
@@ -105,4 +105,14 @@
       {{ template "_internal/google_analytics.html" . }}
     {{ end }}
     {{ partial "head_end.html" . }}
+    <script>
+      var _hmt = _hmt || [];
+      (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?d5c2fda4efd2970e4d5b060c3e62f4ae";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+      })();
+      </script>
+      
   </head>
