--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -20,5 +20,20 @@
     <ul class="sidebar-buttons">
       {{ partial "menu.html" (dict "menu" .Site.Menus.misc "root" $) }}
     </ul>
+    <ul class="sidebar-buttons">
+      <li class="sidebar-button">
+        {{ if (eq .Site.Language.Lang "zh-cn") }}
+          <a id="en-version" class="sidebar-button-link" href="javascript:void(0)">
+            <i class="sidebar-button-icon fa fa-lg fa-language"></i>
+            <span class="sidebar-button-desc">English</span>
+          </a>
+        {{ else }}
+          <a id="cn-version" class="sidebar-button-link" href="javascript:void(0)">
+            <i class="sidebar-button-icon fa fa-lg fa-language"></i>
+            <span class="sidebar-button-desc">中文版</span>
+          </a>
+        {{ end }}
+      </li>
+    </ul>
   </div>
 </nav>
