--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -23,12 +23,12 @@
     <ul class="sidebar-buttons">
       <li class="sidebar-button">
         {{ if (eq .Site.Language.Lang "zh-cn") }}
-          <a id="en-version2" class="sidebar-button-link" href="/blog/en-us">
+          <a id="en-version2" class="sidebar-button-link" href="/en-us">
             <i class="sidebar-button-icon fa fa-lg fa-language"></i>
             <span class="sidebar-button-desc">English</span>
           </a>
         {{ else }}
-          <a id="cn-version2" class="sidebar-button-link" href="/blog/zh-cn">
+          <a id="cn-version2" class="sidebar-button-link" href="/zh-cn">
             <i class="sidebar-button-icon fa fa-lg fa-language"></i>
             <span class="sidebar-button-desc">中文版</span>
           </a>
