--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,4 @@
-{{ partial "head.html" . }}
+{{ partial "index-head.html" . }}
   <body>
     <div id="blog">
       {{ partial "header.html" . }}
@@ -18,4 +18,4 @@
         {{ partial "footer.html" . }}
       </div>
     </div>
-{{ partial "foot.html" . }}
+{{ partial "index-foot.html" . }}
