--- a/layouts/partials/index-foot.html
+++ b/layouts/partials/index-foot.html
@@ -4,5 +4,7 @@
     {{ partial "cover.html" . }}
     {{ partial "script.html" . }}
     {{ partial "foot_end.html" . }}
+    {{ partial "sw.html" . }}
+    
   </body>
 </html>
