--- a/layouts/partials/index-head.html
+++ b/layouts/partials/index-head.html
@@ -37,6 +37,7 @@
       <link rel="publisher" href="https://plus.google.com/{{ . | urlize }}">
     {{ end }}
     <link rel="canonical" href="{{ .Permalink }}">
+    <meta name="theme-color" content="#010411">
     <link rel="manifest" href="./manifest.json">
     <!--EXTERNAL STYLES-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
