--- a/layouts/partials/sw.html
+++ b/layouts/partials/sw.html
@@ -1,9 +1,9 @@
 <script>
-if('serviceWorker' in navigator) {
-  navigator.serviceWorker
-    .register('./sw.js')
-    .then(() => {
-      console.log('Service Worker Registered')
-    })
-}
+// if('serviceWorker' in navigator) {
+//   navigator.serviceWorker
+//     .register('./sw.js')
+//     .then(() => {
+//       console.log('Service Worker Registered')
+//     })
+// }
 </script>
