--- a/layouts/partials/sw.html
+++ b/layouts/partials/sw.html
@@ -1,7 +1,7 @@
 <script>
 if('serviceWorker' in navigator) {
   navigator.serviceWorker
-    .register('./sw.js')
+    .register('./sw-v2.js')
     .then((registration) => {
       console.log('Service Worker Registered')
       registration.update()
