feat: change code font-family

--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -8,7 +8,7 @@ $weixin-font-family: -apple-system,BlinkMacSystemFont,SF UI Text,Helvetica Neue,
 $open-sans:            $weixin-font-family;
 $open-sans-sans-serif: $weixin-font-family;
 $merriweather-serif:   $weixin-font-family;
-$menlo:                $weixin-font-family;
+$menlo:                Consolas,Liberation Mono,Menlo,Courier,monospace;;
 
 $font-family-base: $open-sans-sans-serif;
 
