--- a/layouts/partials/sw.html
+++ b/layouts/partials/sw.html
@@ -8,4 +8,18 @@ if('serviceWorker' in navigator) {
       console.log('Service Worker Updated')
     })
 }
+
+if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+  document.body.classList.add('dark-theme')
+}
+
+const toggleTheme = (e) => {    
+  const darkModeOn = e.detail.colorScheme === 'dark';
+  if(darkModeOn) {
+    document.body.classList.add('dark-theme')
+  } else {
+    document.body.classList.remove('dark-theme')
+  }
+};
+document.addEventListener('colorschemechange', toggleTheme);
 </script>
